restyle for dark theme wuhu

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,6 +5,7 @@
 
 body {
   background-image: url(glittersky.gif);
+  color: white;
   margin: 0;
   font-family: 'Space Grotesk',  -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
